[package]
name = "fortuna"
version = "0.1.0"
authors = ["Garren Smith <garren.smith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_v8 = "0.3.9"
prost = "0.6.1"
tonic = "0.1.1"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }

[build-dependencies]
tonic-build = "0.1.1"
